--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap");
+
 
 @tailwind base;
 @tailwind components;
@@ -7,6 +8,15 @@
 /* 
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
 */
+
+
+body {
+    font-family: 'Libre Baskerville', serif;
+    background-color: #DFF2F0;
+    /* Turquoise background color */
+    color: #333;
+
+}
 
 .main {
     width: 100vw;
@@ -76,11 +86,11 @@
 }
 
 .black_btn {
-    @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+    @apply border border-black bg-violet-800 py-1.5 px-5 text-white transition-all hover:bg-white hover:text-purple-950 text-center text-sm font-serif flex items-center justify-center;
 }
 
 .outline_btn {
-    @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+    @apply border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-violet-900 hover:text-white text-center text-sm font-serif flex items-center justify-center;
 }
 
 .head_text {
@@ -91,12 +101,12 @@
     @apply bg-gradient-to-r from-pink-500 via-purple-600 to-indigo-500 bg-clip-text text-transparent;
 }
 
-.orange_gradient {
-    @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
+.orange_btn {
+    @apply bg-transparent py-1.5 px-5 text-black transition-all hover:bg-violet-900 hover:text-white text-center text-sm font-inter flex items-center justify-center;
 }
 
-.green_gradient {
-    @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
+.purple_btn {
+    @apply border-black bg-transparent py-1.5 px-5 text-purple-900 transition-all hover:bg-violet-900 hover:text-white text-center text-sm font-inter flex items-center justify-center;
 }
 
 .blue_gradient {
@@ -146,7 +156,7 @@
 
 /* Nav Component */
 .logo_text {
-    @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
+    @apply max-sm:hidden font-serif font-bold text-lg text-gray-700 tracking-wide;
 }
 
 .dropdown {
